Bob:fix CCTalk too long

--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,9 @@ header a, header a:link, header a:visited, header a:active, header a:hover {
 	color: #fff;
 	text-decoration: none;
 }
+header .en {
+	font-size: 12px;
+}
 .content {
 	width: 100%;
 	height: 90%;
